# Telegram_Cloud_Storage

./: Cargo.toml
bot/: .env  Cargo.toml
bot/src/: bot.rs  main.rs
listing/: README.md
telegram_cloud_filesystem/: Cargo.toml
telegram_cloud_filesystem/src/: main.rs
upload/: README.md
utils/: README.md
