[package]
name = "telegram_cloud_filesystem"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.15.1"
libc = "0.2.172"

tokio = { version = "1.40.0", default-features = false, features = [
    "signal","rt-multi-thread"
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }
toml = "0.8.19"

chrono = "0.4.38"
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc"
] }
grammers-crypto = { version = "0.7.0" }
grammers-client = { version = "0.7.0" }
grammers-mtproto = { version = "0.7.0" }
grammers-mtsender = { version = "0.7.0" }
grammers-session = {  version = "0.7.0" }
grammers-tl-types = { version = "0.7.0", features = [
    "tl-mtproto",
] }
html5ever = { version = "0.29.0", optional = true }
locate-locale = "0.2.0"
log = "0.4.22"
md5 = "0.7.0"
mime_guess = "2.0.5"
os_info = { version = "3.8.2", default-features = false }
pin-project-lite = "0.2"
pulldown-cmark = { version = "0.12.1", default-features = false, optional = true }
url = { version = "2.5.2", optional = true }
web-time = "1.1.0"